--- a/source/app.config
+++ b/source/app.config
@@ -61,6 +61,9 @@
             <setting name="ConvertedSettingsStoredMappingsCasing" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="EditUseOptimisticUpdate" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
