Work Item #836 - Implement a MySqlDataRow class to better manage interaction with Excel cells Bug #17852774 - EDIT DATA - DELETING A ROW TRIGGERS A DATA CHANGE IN THE FOLLOWING ROW
- Created the MySqlDataRow class to replace the intermediate RangeAndAddress one that was used to link a DataRow objecet with corresponding Excel ranges containing data from that DataRow object. Now the MySqlDataRow has a direct link with an Excel Range holding the row's data and also with individual Excel Ranges for each of the Excel cells modified by the user during an Edit Data operation. (source/Classes/MySqlDataRow.cs, source/Classes/RangeAndAddress.cs, source/MySQL.ForExcel.csproj)
- Moved some logic that involved refreshing the Excel Range of a DataRow to the new MySqlDataRow class. (source/Forms/EditDataDialog.cs, source/Classes/MySqlDataRow.cs)
- Moved all the logic that involved working with a specifc DataRow object to the new MySqlDataRow class, and some other logic involving Excel Ranges to the ExcelUtilities one. (source/Classes/ExcelUtilities.cs, source/Classes/MySqlDataTable.cs, source/Classes/MySqlDataRow.cs)
- Moved some logic involving MySQL data from the ExcelAddInPane class to the MySqlDataUtilities one. (source/Classes/MySqlDataUtilities.cs, source/Controls/ExcelAddInPane.cs)
- Changed the type of the ImportDataTable property to hold a MySqlDataTable object instead of a regular DataTable, this makes it easier to assign a corresponding Excel Range to a MySqlDataRow inside the MySqlDataTable at import time. Also added code to the ImportButton_Click method to feed the importing data to the MySqlDataTable. (source/Forms/ImportTableViewForm.cs)
- Added a new overload for the AddResult method in the PushResultsDataTable class. (source/Classes/PushResultsDataTable.cs)
- Added some resource strings. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Classes\MySqlDataColumn.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Classes\MySqlDataRow.cs" />
     <Compile Include="Classes\MySqlDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -248,7 +249,6 @@
     <Compile Include="Classes\PushResultsDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Classes\RangeAndAddress.cs" />
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
     </Compile>
