Work Item #706 - Allow for query editing before query is applied upon Append, Export and Edit
- Added "Preview SQL statements before they are sent to the server" and "Show executed SQL statements along with their results" global options to control this behavior of this feature. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Created the MySqlStatement class to encapsulate the storage of the SQL statement related to a data row and to execute the statement and hold results information like warnings, error messages and affected rows count. (source/Classes/MySqlStatement.cs)
- Created the IMySqlDataRow interface to define basic methods and properties needed to interact with a statement. (source/Interfaces/IMySqlDataRow.cs)
- Created the MySqlScriptDialog class to visually display the statements that are going to be executed as part of an Append, Export or Edit data operation, users can modify the previewed statements and then execute them. (source/Forms/MySqlScriptDialog.cs, source/Forms/MySqlScriptDialog.Designer.cs, source/Forms/MySqlScriptDialog.resx)
- Deprecated (deleted) the PushResultsDataTable class. (source/Classes/PushResultsDataTable.cs)
- Created the MySqlDummyRow class to hold SQL statements typed in by a user or edited from a statement contained in a MySqlDataRow object. These dummy rows are treated just the same as MySqlDataRow objects to execute statements. (source/Classes/MySqlDummyRow.cs)
- Removed the AppendDataWithManualQuery, InsertDataWithManualQuery, CreateTable, GetAppendSql and GetInsertSql methods because their functionality is now encapsulated in the MySqlDataRow, MySqlStatement and MySqlScriptDialog classes, also this was simplified by having a single object producing the SQL statements independent of the operation being performed (Append, Export or Edit). Broke down the SetData method into the SetupColumnsWithData and AddExcelData methods, this way there is less overhead when filling a table with data to creat

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -244,11 +244,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Classes\MySqlDataUtilities.cs" />
+    <Compile Include="Classes\MySqlDummyRow.cs" />
     <Compile Include="Classes\MySqlForExcelSettings.cs" />
+    <Compile Include="Classes\MySqlStatement.cs" />
     <Compile Include="Classes\NativeWindowWrapper.cs" />
-    <Compile Include="Classes\PushResultsDataTable.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -357,6 +356,12 @@
     <Compile Include="Forms\ExportDataForm.Designer.cs">
       <DependentUpon>ExportDataForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MySqlScriptDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MySqlScriptDialog.Designer.cs">
+      <DependentUpon>MySqlScriptDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\NewSchemaDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -372,6 +377,7 @@
     <Compile Include="Controls\TransparentPictureBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Interfaces\IMySqlDataRow.cs" />
     <Compile Include="Panels\AutoStyleableBasePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -447,6 +453,9 @@
     <EmbeddedResource Include="Forms\ExportDataForm.resx">
       <DependentUpon>ExportDataForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MySqlScriptDialog.resx">
+      <DependentUpon>MySqlScriptDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewSchemaDialog.resx">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -509,6 +518,9 @@
     <None Include="Resources\MySQLforExcel-ExportDlg-TableName-32x32.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\zoom_reset.png" />
+    <None Include="Resources\zoom_out.png" />
+    <None Include="Resources\zoom_in.png" />
     <None Include="Resources\ExcelAddinFilter.png" />
     <Content Include="Resources\ArrowDown.png" />
     <Content Include="Resources\ArrowRight.png" />
