--- a/source/app.config
+++ b/source/app.config
@@ -22,9 +22,6 @@
             <setting name="ExportUseFormattedValues" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="ExportShowCopySQLButton" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="AppendPerformAutoMap" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -62,6 +59,12 @@
                 <value>False</value>
             </setting>
             <setting name="EditUseOptimisticUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="GlobalSqlQueriesPreviewQueries" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="GlobalSqlQueriesShowQueriesWithResults" serializeAs="String">
                 <value>False</value>
             </setting>
         </MySQL.ForExcel.Properties.Settings>
