Work Item #694 - Named Table creation upon single table import
- Added extension methods related to Excel Tables. (source/Classes/ExcelUtilities.cs)
- Added code to create an Excel table when importing data. (source/Classes/MySqlDataTable.cs)
- Added options for an Import Data operation to create Excel tables and to apply a formatting style to them. (source/Forms/ImportAdvancedOptionsDialog.cs, source/Forms/ImportAdvancedOptionsDialog.Designer.cs, source/Forms/ImportAdvancedOptionsDialog.resx, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)

--- a/source/app.config
+++ b/source/app.config
@@ -67,6 +67,12 @@
             <setting name="GlobalSqlQueriesShowQueriesWithResults" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ImportCreateExcelTable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ImportExcelTableStyleName" serializeAs="String">
+                <value>MySqlDefault</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
