--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -65,5 +65,11 @@
     <Setting Name="GlobalSqlQueriesShowQueriesWithResults" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ImportCreateExcelTable" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ImportExcelTableStyleName" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">MySqlDefault</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
