Work Item #899 - Change global option checkboxes to Preview or Show SQL statements to radio buttons
- Replaced the "Preview SQL statements before they are sent to the server" and the "Show executed SQL statements along with their results" checkboxes with radio buttons and added a default new one called "Do not show SQL statements sent to the server". (source/Forms/GlobalOptionsDialog.cs, source/Forms/GlobalOptionsDialog.Designer.cs, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -60,7 +60,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="GlobalSqlQueriesPreviewQueries" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="GlobalSqlQueriesShowQueriesWithResults" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
