--- a/source/app.config
+++ b/source/app.config
@@ -62,7 +62,7 @@
                 <value>True</value>
             </setting>
             <setting name="GlobalSqlQueriesPreviewQueries" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="GlobalSqlQueriesShowQueriesWithResults" serializeAs="String">
                 <value>False</value>
