Work Item #692 - Save edit sessions in file and reopen automatically (Part 2)
- Moved logic from ExcelAddInPane to ThisAddIn class in order to properly manage Edit sessions where a single ExcelAddInPane is used with many Excel workbooks (SDI) but also support the scenario where each workbook contains an ExcelAddInPane (MDI). (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs, source/Forms/EditDataDialog.cs, source/ThisAddIn.cs, source/Panels/DbObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/WelcomePanel.cs)
- Changed the dialog showed to users to ask them what to do with saved Edit sessions. (source/Forms/RestoreEditSessionsDialog.cs, source/Forms/RestoreEditSessionsDialog.Designer.cs, source/Forms/RestoreEditSessionsDialog.resx)

--- a/source/app.config
+++ b/source/app.config
@@ -73,7 +73,10 @@
             <setting name="ImportExcelTableStyleName" serializeAs="String">
                 <value>MySqlDefault</value>
             </setting>
-            <setting name="EditRestoreEditSessions" serializeAs="String">
+            <setting name="EditSessionsRestoreWhenOpeningWorkbook" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="EditSessionsReuseWorksheets" serializeAs="String">
                 <value>True</value>
             </setting>
         </MySQL.ForExcel.Properties.Settings>
