Work Item #924 - Import Mysql data, raise an error when trying on editing mode sheet
- Fixed code in the ImportDataHotLabel_Click method to always create a new Worksheet (using the CreateWorksheet method) when a user tries to import data on a Worksheet with an active Edit session. (source/Panels/DbObjectSelectionPanel.cs)
- Deleted the GetActiveOrCreateWorksheet method since it is no longer used in the project. (source/Classes/ExcelUtilities.cs)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -80,5 +80,11 @@
     <Setting Name="EditSessionsReuseWorksheets" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ImportPrefixExcelTable" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ImportPrefixExcelTableText" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.String" Scope="User">
+      <Value Profile="(Default)">MySQL</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
