--- a/source/app.config
+++ b/source/app.config
@@ -79,6 +79,12 @@
             <setting name="EditSessionsReuseWorksheets" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ImportPrefixExcelTable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ImportPrefixExcelTableText" serializeAs="String">
+                <value>MySQL</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
