Bug #17577014 - EXPORTING HUGE TABLE (250,000 ROWS) NEVER FINISH (SERVER LOST THE CONNECTION )
- Added the AddLocalizedDateFormatStringsAsNames to add to the active Excel workbook names used to assemble a localized MySQL date format, this in order to let Excel format dates using a formula for a whole column instead of processing date values 1 by 1. Added the GetRowValuesAsLinearArray to retrieve in a single operation an array with values from an Excel row range to be loaded into a MySqlDataRow. Added the GetNonEmptyRange method to return an Excel range containing non empty cells, so less iterations are needed to process data. Added the GetNonEmptyRectangularAreaRange to obtain a rectangular sub-range from a source range leaving out empty cells outside the rectangular area. (source/Classes/ExcelUtilities.cs)
- Added the AffectsRowsOnServer method to check if a SqlStatementType enumeration corresponds to an operation that affects rows on the server. Added the GetLinearArray method to get a linear array from a bidimensional one since Excel returns the latter. (source/Classes/MiscUtilities.cs)
- Moved data type detection from the MySqlDataTable to the MySqlDataColumn class' DetectDatatype method. Moved some setting logic for an Auto Primary Key column from the MySqlDataTable to the MySqlDataColumn class. Added the RangeColumnIndex property to store the source Excel column range from where the data that populates the column comes from. (source/Classes/MySqlDataColumn.cs)
- Optimized the building of SQL queries for MySqlDataRow objects by having the parent MySqlDataTable object calculate the common pieces of the SQL queries so the child rows only calculate the part that changes on every row. (source/Classes/MySqlDataRow.cs, source/Classes/MySqlDataTable.cs)
- Added optimization options to the AppendAdvancedOptionsDialog and AdvancedExportOptionsDialog to disable indexes and lock tables for Append Data operations and to create indexes after data has been inserted for Expor

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Classes\MySqlForExcelSettings.cs" />
     <Compile Include="Classes\MySqlStatement.cs" />
     <Compile Include="Classes\NativeWindowWrapper.cs" />
+    <Compile Include="Classes\TempRange.cs" />
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
     </Compile>
