--- a/source/app.config
+++ b/source/app.config
@@ -47,7 +47,7 @@
                 <value>15</value>
             </setting>
             <setting name="GlobalConnectionCommandTimeout" serializeAs="String">
-                <value>30</value>
+                <value>60</value>
             </setting>
             <setting name="ImportPreviewRowsQuantity" serializeAs="String">
                 <value>10</value>
@@ -84,6 +84,12 @@
             </setting>
             <setting name="ImportPrefixExcelTableText" serializeAs="String">
                 <value>MySQL</value>
+            </setting>
+            <setting name="AppendSqlQueriesDisableIndexes" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ExportSqlQueriesCreateIndexesLast" serializeAs="String">
+                <value>True</value>
             </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
