Work Item #1088 - first attempt of displaying the Addin doesn't work
- Added the GetPropertyInternational, SetPropertyInternational and InvokeMethodInternational methods to set/get properties or invoke methods using the English US locale in the code but converting the data to the current user locale. Added the AddNameWithInternationalFormula method to create an Excel Name object with a predefined formula to be reused later in Excel, the formula is set in the English US locale but converted to the current user locale. Simplified the AddLocalizedDateFormatStringsAsNames method by reusing the new AddNameWithInternationalFormula method. (source/Classes/ExcelUtilities.cs)
- Fixed a bug in the SetupColumnsWithData method that happened when exporting data while not creating the AutoPK column, the array with column indexes for date columns was offset by 1 column. (source/Classes/MySqlDataTable.cs)
- Added the HideLocalizedDateFormatNames property set with a default true value so we can later on troubleshoot problems with the added Excel Name objects that user report by asking them to set that property to false and check how the Excel Name objects are created in their environment. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings, source/ThisAddIn.cs, source/app.config)

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -89,5 +89,8 @@
     <Setting Name="ExportSqlQueriesCreateIndexesLast" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="HideLocalizedDateFormatNames" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
