--- a/source/app.config
+++ b/source/app.config
@@ -88,6 +88,9 @@
             <setting name="ExportSqlQueriesCreateIndexesLast" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="HideLocalizedDateFormatNames" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
