Workitem#704 - Reset options to defaults (New Feature)
- Creation of Class PropertyGroup class, derived of Attribute; to enable sectionization of the settings file by group.
- Creation of SettingsGroup enum inside PropertyGroup to aid classify the settings by section.
- Implementation of new ResetSectionToDefaultValues method to handle resets of settings correspondant to a defined section to its default value in MiscUtilities class.
- Added New generic method GetPropertyDefaultValueByName which returns the default value of a settings property casted to an specific type.
- Added ResetToDefaultButton control in the ExportAdvancedOptionsDialog, ImportAdvancedOptionsDialog and AppendAdvancedOptionsDialog forms and wiring to click event on all.
- New method RefreshControlValues created to encapsulate the dialog controls' values refresh operation at ExportAdvancedOptionsDialog, ImportAdvancedOptionsDialog and AppendAdvancedOptionsDialog forms. Use of boolean parameter to know when to set the controls to the Default's instead of the current setting's values.
- Applied the new Custom Attibute class where required in the Settings.Designer file.
- Applied changes to give the user the option to reset global options to their default values.

Other changes:
- Rearranged PreviewRowsQuantityNumericUpDown_ValueChanged method inside ExportAdvancedOptionsDialog to honor alphabetical order.

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Classes\MySqlStatement.cs" />
     <Compile Include="Classes\NativeWindowWrapper.cs" />
     <Compile Include="Classes\PropertiesCollection.cs" />
+    <Compile Include="Classes\PropertyGroup.cs" />
     <Compile Include="Classes\TempRange.cs" />
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
