Workitem #697 - Storing connection information for Excel Tables + data refresh (Import Data)
- Refactor of EditSessionInfo's method HasSameWorkbookAndTable to be promoted to a more general implementation using ISessionInfo interface as input parameter instead.
- Creation of ISessionInfo interface to generalize the ground between Edit and Import session objects.
- Implementation of the ISessionInfo interface by the EditSessionInfo class.
- Return type of CreateExcelTable extension method changed from void to string, returning the name of the Excel Object being created.
- Creation of ImportSessionInfo class.
- Some extra parameters are required at both ImportDataAtGivenExcelCell() method overloads.
- MySqlDataTable creates new ImportSessionInfo objects when needed and appends them to its correspondant ThisAddin collection.
- RejectChanges() call was extracted from RefreshData() method at MySqlDataTable class and incorporated into RevertDataChanges() at EditDataDialog class.
- New handles were added to the Application_SheetBeforeRightClick event at ThisAddin class.

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Classes\CustomPropertyDescriptor.cs" />
     <Compile Include="Classes\DataTypeUtilities.cs" />
     <Compile Include="Classes\DbObject.cs" />
+    <Compile Include="Classes\ImportSessionInfo.cs" />
     <Compile Include="Classes\EditSessionInfo.cs" />
     <Compile Include="Classes\ExcelUtilities.cs" />
     <Compile Include="Classes\Exceptions\QueryExceedsMaxAllowedPacketException.cs" />
@@ -404,6 +405,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Interfaces\IMySqlDataRow.cs" />
+    <Compile Include="Interfaces\ISessionInfo.cs" />
     <Compile Include="Panels\AutoStyleableBasePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
