--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -92,5 +92,8 @@
     <Setting Name="HideLocalizedDateFormatNames" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ImportSessionsList" Provider="MySQL.ForExcel.Classes.MySqlForExcelSettings" Type="System.Collections.Generic.List&lt;MySQL.ForExcel.Classes.ImportSessionInfo&gt;" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
