Feature #703 - Show all available data types (Export Data)
- Created the MySqlDataType class to represent permitted MySQL data types used in MySQL for Excel, it contains properties describing the behavior of a data type such as Display to know if the data type is to be shown to users as an available type, Name, Description, IsCommon to know if the data type is a widely used type shown in previous versions of MySQL for Excel, IsBaseType to know if the data type is a base MySQL type or a derived one (like Varchar(255)), and ParametersCount to know how many attributes within parenthesis can the data type have. The class also contains static properties to return lists of display types, base types and all types that are calculated just once and reused throughout the lifespan of the add-in.(source/Classes/MySqlDataType.cs, source/MySQL.ForExcel.csproj)
- Added the ExportShowAllMySqlDataTypes boolean setting with a default value of false. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings, source/app.config)
- Added a checkbox called "Show all available MySQL data types in the Data Type drop-down list" to the ExportAdvancedOptionsDialog class to save its value in the ExportShowAllMySqlDataTypes setting. (source/Forms/ExportAdvancedOptionsDialog.cs, source/Forms/ExportAdvancedOptionsDialog.Designer.cs, source/Forms/ExportAdvancedOptionsDialog.resx)
- Added code to the ExportDataForm class to fill the Data Type combo box with either common MySQL data types or with all display ones depending on the value of the ExportShowAllMySqlDataTypes setting, also modified the events tied to the Data Type combo box to interact with its new DataSource. (source/Forms/ExportDataForm.cs, source/Forms/ExportDataForm.Designer.cs, source/Forms/ExportDataForm.resx)
- Modified the GetMySqlDataTypeMaxLength, Type1FitsIntoType2 and StringValueCanBeStoredWithMySqlType to accomodate for spatial data types now dimmed as permitted data types. Modified the ValidateUserDataType 

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Classes\MySqlDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Classes\MySqlDataType.cs" />
     <Compile Include="Classes\MySqlDataUtilities.cs" />
     <Compile Include="Classes\MySqlDummyRow.cs" />
     <Compile Include="Classes\MySqlForExcelSettings.cs" />
