--- a/source/app.config
+++ b/source/app.config
@@ -91,6 +91,9 @@
             <setting name="HideLocalizedDateFormatNames" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ExportShowAllMySqlDataTypes" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
