Work Item #1216 - Add new dialog to maintain Import/Edit Sessions.
- Renamed ThisAddIn property ActiveImportSesions to StoredImportSessions to maintain naming consistency.
- Added button at Global Dialog to open the new ManagemeSessionsDialog form from there, and method to delete unwanted sessions.
- Created ManageSessionsDialog Form to deliver the users a way to select unwanted Import and Edit Sessions and dispose of them.

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -348,6 +348,12 @@
     <Compile Include="Forms\ImportProcedureForm.Designer.cs">
       <DependentUpon>ImportProcedureForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ManageSessionsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManageSessionsDialog.Designer.cs">
+      <DependentUpon>ManageSessionsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\PreviewTableViewDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -468,6 +474,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportProcedureForm.resx">
       <DependentUpon>ImportProcedureForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManageSessionsDialog.resx">
+      <DependentUpon>ManageSessionsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PreviewTableViewDialog.resx">
       <DependentUpon>PreviewTableViewDialog.cs</DependentUpon>
