Bug #18962538 - ERROR WHEN CLICKING REFRESH ALL IN DATA TAB
- Removed the ManageTaskPaneRibbon control files and added the MySqlRibbon class ones to replace the Visual Designer Ribbon with the XML Ribbon of the Excel Fluent Interface in order to be able to override the native functionality for the Refresh and Refresh all ribbon commands. (source/Controls/ManageTaskPaneRibbon.Designer.cs, source/Controls/ManageTaskPaneRibbon.cs/ source/Classes/ManageTaskPaneRibbon.resx, source/Controls/MySqlRibbon.cs, source/Controls/MySqlRibbon.xml, source/MySQL.ForExcel.csproj)
- Added code to support the new XML Ribbon as well as the public RefreshAllCustomFunctionality and RefreshDataCustomFunctionality methods that will get called from the overriden actions defined in the MySqlRibbon.xml. Removed all the code used before for catching the Click event of the Refresh and Refresh All CommandButtons as it is no longer needed. (source/ThisAddIn.ccs)
- Created the GetImportSession extension method to retrieve the ImportSessionInfo object related to a ExcelInterop.ListObject.  Created the RefreshAllListObjects extension method to attempt to refresh all ExcelInterop.ListObject objects contained in the given ExcelInterop.Worksheet. (source/Classes/ExcelUtilities.cs)
- Removed a couple of unused resource strings. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -264,14 +264,11 @@
     <Compile Include="Controls\ExcelAddInPane.Designer.cs">
       <DependentUpon>ExcelAddInPane.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ManageTaskPaneRibbon.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Controls\ManageTaskPaneRibbon.Designer.cs">
-      <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\MySqlListView.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\MySqlRibbon.cs">
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Controls\PreviewDataGridView.cs">
       <SubType>Component</SubType>
@@ -442,9 +439,7 @@
       <DependentUpon>HotLabel.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\ManageTaskPaneRibbon.resx">
-      <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MySqlRibbon.xml" />
     <EmbeddedResource Include="Controls\SearchEdit.resx">
       <DependentUpon>SearchEdit.cs</DependentUpon>
     </EmbeddedResource>
