--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -231,6 +231,11 @@
     <Compile Include="Classes\CustomPropertyDescriptor.cs" />
     <Compile Include="Classes\DataTypeUtilities.cs" />
     <Compile Include="Classes\DbObject.cs" />
+    <Compile Include="Classes\DbProcedure.cs" />
+    <Compile Include="Classes\DbSchema.cs" />
+    <Compile Include="Classes\DbTable.cs" />
+    <Compile Include="Classes\DbView.cs" />
+    <Compile Include="Classes\ImportDataParams.cs" />
     <Compile Include="Classes\ImportSessionInfo.cs" />
     <Compile Include="Classes\EditSessionInfo.cs" />
     <Compile Include="Classes\ExcelUtilities.cs" />
